--- a/src/blocks/Header.css
+++ b/src/blocks/Header.css
@@ -6,7 +6,7 @@
     width: 100%;
     max-width: 1360px;
     margin: 0;
-    padding: 32px 16px 28px 16px;
+    padding: 32px 16px 23px 16px;
 }
 
 .header__inner {
